<resources>
    <string name="app_name">Poemas GT</string>
    <string name="po1">
        ¡Patria de las perfectas luces,
        tuya
la ingenua, agraria y melodiosa fiesta,
campos que cubren hoy brazos de cruces!
¡Patria de los perfectos lagos, altos
espejos que tu mano acerca al cielo
para que vea Dios tantos estragos!
¡Patria de los perfectos montes, cauda
de verdes curvas imantando auroras,
hoy por cárcel te dan tus horizontes!
¡Patria de los perfectos días, horas
de pájaros, de flores, de silencio
que ahora, ¡oh dolor!, son agonías!
¡Patria de los perfectos cielos, dueña
de tardes de oro y noches de luceros,
alba y poniente que hoy visten tus duelos!
¡Patria de los perfectos valles, tienden
de volcán a volcán verdes hamacas
que escuchan hoy llorar casas y calles!
¡Patria de los perfectos frutos, pulpa
de paraíso en cáscara de luces,
agridulces ahora por tus lutos!
¡Patria del armadillo y la luciérnaga
del pavoazul y el pájaro esmeralda,
por la que llora sin cesar el grillo!
¡Patria del monaguillo de los monos,
el atelcolilargo, los venados,
los tapires, el pájaro amarillo
y los cenzontles reales, fuego en plumas
del colibrí ligero, juego en voces
de la protesta de tus animales!
Loros de verde que a tu oído gritan
no ser del oro verde que ambicionan
los que la libertad, Patria, te quitan.
Guacamayas que son tu plusvalía
por el plumaje de oro, cielo y sangre,
proclamándote va su gritería...
¡Patria de las perfectas aves, libre
vive el quetzal y encarcelado muere,
la vida es libertad, Patria, lo sabes!
¡Patria de los perfectos mares, tuyos
de tu profundidad y ricas costas,
más salóbregos hoy por tus pesares!
¡Patria de las perfectas mieses, antes
que tuyas, júbilo del pueblo, gente
con la que ahora en el pesar te creces!
¡Patria de los perfectos goces, hechos
de sonido, color, sabor, aroma,
que ahora para quién no son atroces!
¡Patria de las perfectas mieles, llanto
salado hoy, llanto en copa de amargura,
no la apartes de mí, no me consueles!
¡Patria de las perfectas siembras, calzan
con hambre de maíz sus pies desnudos,
los que huyen hoy, tus machos y tus hembras!
    </string>
    <string name="po2">
        Madre, te bendigo porque supiste hacer
de tu hijo un hombre real y enteramente humano.
Él triunfará en la vida. Se marcha y es el caso
de hablar de su regreso. Cuando veas volver,
en un día de fiesta, un viador que en la mano
luzca preciosas joyas y haga notorios paso
y ademán -¿insolencia, dinero o buena suerte?-;
no salgas a su encuentro, puede no ser tu hijo.

Madre, si mirando el camino se acongoja tu alma
y tras la tapia asoma entonces un caminante
que trae gran renombre, espada poderosa,
ceñidas armaduras, en la frente la palma
de la victoria, y gesto de sigamos adelante,
por mucho que eso valga vale muy poca cosa
el poder de la espada, el oro y el renombre;
no salgas a su encuentro, puede no ser tu hijo.

Madre, si aspirando el aroma de una flor
en un día de otoño gris y meditabundo
oyes que alguien te llama y te dice: ¡Señora,
allá por el camino viene un gran señor
del brazo de su amada, conoce todo el mundo,
en la pupila clara trae la mar que añora
y en su copa de mieles un sabor de aventura!;
no salgas a su encuentro, puede no ser tu hijo.

Madre, si en el invierno, después de haber cenado,
estás junto al bracero pensando con desgano,
oídos a la lluvia que cae sobre el techo,
y en eso, puerta y viento... Es alguien que ha
entrado
descubierta la frente y herramienta en la mano,
levántate a su encuentro porque tienes derecho
de abrazar a tu hijo, de quien hiciste un hombre
que vuelve de la vida con el jornal ganado.
    </string>
    <string name="po3">
        Recuerdo que en los días rosados de mi infancia,
la abuela…(¿de quién son los abuelos?, ¿de los niños?),
solía por las noches, cuando la tibia instancia
parecía una caja de dulces de la luna,
contar historias viejas. Hoy ya no sé ninguna.
Abriendo lentamente los cofres de mi abuelo,
me daba a que besara la hoja de su espada.
Guardaba ha muchos años un relojón de plata,
una bandera blanca y azul color de cielo,
la estrella de una espuela y un lazo de corbata.
Conservo esos recuerdos que me legó de un hombre
y tengo en las reliquias de mis antepasados
la historia de mi casa, la gloria de mi nombre,
y guardo en esos cofres que siempre están abiertos
el retrato de bodas de mis abuelos muertos.
    </string>
    <string name="po4">
        Sobre la gran muralla americana
altivo torreón, vecino al cielo,
su cúspide levanta soberana,
a do jamas osó llevar su vuelo
la reina de las aves atrevida
que en la cuna de Júpiter anida.

Gigante es Almolonga entre los montes,
fuerte, soberbio, grande entre los grandes
¡Cuál domina millares de horizontes!
¡Cómo huella la cumbre de los Andes!
¡Cómo mira a su falda avasalladas,
de cien montes las cimas encumbradas!

Cuando animado el pensador profundo
de la sublime inspiración divina
quiere ver a sus pies el ancho mundo
y al vértice elevado se encamina,
¡cómo va sus ideas ensalzando
al par que va subiendo y va mirando!

Allá en su patria misma el fiero rayo
oye bronco tronar bajo su planta:
y el sol que el monte hiere de soslayo
y la nube que lenta se levanta,
y su sombra contempla, que distinta
cual espectro en la atmósfera se pinta.

Verde, risueña, alegre, la campaña
que mil arroyos cruzan argentinos
divisa, y la ciudad y la cabaña,
y el cerro con sus bosques y sus pinos,
el lago de cristal, la fértil vega
y el río transparente que la riega.

Mira a un lado el Océano poderoso
cuyas ondas azules va lamiendo
la inmóvil planta al terrenal coloso.
Al Izalco, por otro mira ardiendo,
y allá en una comarca más distante
el Momotombo mira fulminante.

Y sin saciar su vista ni su mente
por estrecho sendero y escarpado
baja de la montaña lentamente
el sabio a sus ideas entregado;
tal virtud, tal poder, tal fuerza encierra
¡aquel gran monumento de la tierra!

Se vuelve y ve de la montaña erguida
en la cintura atlética azulada
cándida zona en derredor ceñida,
y la sublime cúpula adornada
de suspendida nubecilla leve
deshecha y pura y blanca como nieve.

Y el filósofo en éxtasis admira
las obras portentosas de natura
y quiere comprenderlas y suspira
al ver su presunción y su locura;
y su saber y su razón humilla
ante el autor de tanta maravilla.

Luego exclama el filósofo admirado:
    </string>
    <string name="po5">
        Una vieja soltera se moría
y sin cesar pedía
al confesor que estába cerca de ella
la palma y la corona de doncella;
y su afán era tanto
que era capaz de impacientar a un santo,
aunque no lo mostrase el padre cura,
hombre muy ponderable de dulzura.

Una de tantas veces, sin embargo,
que estába repitiendole el encargo
nuestra virgen anciana
por centésima vez en la mañana,
aburrido el pastor de aquella tema
a la vieja le dijo con gran flema:
«Mire, Tía Pascuala, que la cosa
es algo peligrosa,
pues si su doncellez no es verdadera,
y la van a enterrar de ésta manera
cubierta con insignias virginales,
el menor de sus males
será ir al infierno en cuerpo y alma
tan sólo por la culpa de la palma;
mírese bien en ello, madre mía,
y no le salga cara su porfía.’
«El Señor, le responde, me és testigo
que no reza conmigo
éso que usted acaba de decirme.
¡Si por algo no temo yo el morirme…!
Ello…en fin…es del todo…indiferente,
Pero…mejor será…porque la gente
no vea…vanidad en mi persona,
que me entierren sin palma ni corona’.

Yo pienso en ti

Yo pienso en ti, tú vives en mi mente
sola, fija, sin tregua, a toda hora,
aunque tal vez el rostro indiferente
no deje reflejar sobre mi frente
la llama que en silencio me devora.
En mi lobrega y yerta fantasía
brilla tu imagen apacible y pura,
como el rayo de luz que el sol envía
a traves de una boveda sombria
al roto mármol de una sepultura.
Callado, inerte, en estupor profundo,
mi corazón se embarga y se enajena
y allá en su centro vibra moribundo
cuando entre el vano estrépito del mundo
la melodía de tu nombre suena.
Sin lucha, sin afán y sin lamento,
sin agitarme en ciego frenesí,
sin proferir un solo, un leve acento,
las largas horas de la noche cuento
¡y pienso en ti!
    </string>
    <string name="po6">
        Es un joven desgraciado
cómo una rosa marchita,
frescura y color le quita
el sol que la ha marchitado.

Apenas la sombra queda
de la forma que perdió:
Ya el olor se disipó,
no hay quién volverselo pueda.

Huye de todo consuelo,
que el infeliz no le tiene:
Ni esperanza le mantiene,
éste grato don del cielo.

En su profundo estupor
y desesperada calma,
ya no lisonjea su alma
ni la gloria ni el honor.

Cómo un volcán abrazado
su adolescencia pasará,
¡cuán violento palpitará
su corazón arrojado!

Hoy para él todo está muerto
que el corazón arrogante
cayó frío en un instante
y de tristeza cubierto.

Otro hombre jamás ha habido
que algún bien no haya gozado;
más él siempre desgraciado
y nunca dichoso ha sido.

La esperanza ni una vez
vino a alimentarle un rato;
no tendrá un recuerdo grato
con qué aliviar su vejez.

Mírale, tierna doncella,
mira aquella alma postrada;
que enciende una tu mirada
la vida que aún resta en ella.

Para la piedad naciste,
tu misión es la ternura;
no seas con él tan dura;
velo: casi ya no existe.

Más ¿rehúsas doncella hermosa,
dar fin a tan cruel tormento?
¿No te mueve ni un momento
su desdicha lastimosa?

Ya su mal está calmado
¡Oh muerte! ¡Oh nada desierta!
abre, eternidad, tu puerta
para que entre un desgraciado
    </string>
    <string name="po7">
        De vez en cuando
camino al revés:
es mi modo de recordar.

Si caminara sólo hacia delante,
te podría contar
cómo es el olvido.
    </string>
    <string name="po8">
        Cuando nací
me pusieron dos lágrimas
en los ojos
para que pudiera ver
el tamaño del dolor de mi gente.
    </string>
    <string name="po9">
        El fuego
acuclillado
apaga la tristeza del leño
cantándole
su ardiente canción.

Y el leño
lo escucha
consumiéndose
hasta olvidar
que fue árbol.
    </string>


</resources>