<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MACat3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:text="Humberto Ak’abal"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:src="@drawable/ic_camino" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Camino al revés"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="center_horizontal"
                android:text="@string/po7"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:src="@drawable/ic_lagrimas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dos lágrimas"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="center_horizontal"
                android:text="@string/po8"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:src="@drawable/ic_fuego" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="El fuego"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="center_horizontal"
                android:text="@string/po9"
                android:textIsSelectable="true"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>