<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MACat1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:text="Miguel Ángel Asturias"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:src="@drawable/ic_cantata" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CANTATA"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="center_horizontal"
                android:text="@string/po1"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:src="@drawable/ic_madre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ES EL CASO DE HABLAR"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="center_horizontal"
                android:text="@string/po2"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:src="@drawable/ic_abue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RETRATO DE ABUELOS"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="center_horizontal"
                android:text="@string/po3"
                android:textIsSelectable="true"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>